Init commit for liveMapping. Made Maze.cpp/hpp

--- a/liveMapping/controllers/liveMapping/Makefile
+++ b/liveMapping/controllers/liveMapping/Makefile
@@ -39,7 +39,7 @@
 ###
 ### ---- C++ Sources ----
 ### if your program uses several C++ source files:
-CXX_SOURCES = manualControl.cpp Micromouse.cpp
+CXX_SOURCES = manualControl.cpp Maze.cpp Micromouse.cpp
 ###
 ### ---- Compilation options ----
 ### if special compilation flags are necessary:
