--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\joshy\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mrtn4110-phased-i5LVtyOs-py3.8"
+    "python.pythonPath": "/usr/bin/python"
 }
