--- a/src/Phases/PhaseA/controllers/z5164829_MTRN4110_PhaseB/Makefile
+++ b/src/Phases/PhaseA/controllers/z5164829_MTRN4110_PhaseB/Makefile
@@ -43,7 +43,7 @@
 ###
 ### ---- Compilation options ----
 ### if special compilation flags are necessary:
-### CFLAGS = -Wno-unused-result
+CFLAGS = -std=c++11
 ###
 ### ---- Linked libraries ----
 ### if your program needs additional libraries:
